// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display c# command 1`] = `
<DotNet
  host="HOST"
  projectKey="project-foo"
  token="myToken"
/>
`;

exports[`display c-family command 1`] = `
<Msvc
  host="HOST"
  projectKey="project-foo"
  token="myToken"
/>
`;

exports[`display c-family command 2`] = `
<ClangGCC
  host="HOST"
  os="linux"
  projectKey="project-foo"
  token="myToken"
/>
`;

exports[`display java command 1`] = `
<JavaGradle
  host="HOST"
  token="myToken"
/>
`;

exports[`display java command 2`] = `
<JavaMaven
  host="HOST"
  token="myToken"
/>
`;

exports[`display others command 1`] = `
<Other
  host="HOST"
  os="window"
  projectKey="project-foo"
  token="myToken"
/>
`;
